06/08/2004  version 0.2 pre6    Ian Lewis <IanLewis@member.fsf.org>

    * Fixed a bug that caused a null pointer exception when reloading an
      untitled document.
    * Changed the DocumentView interface to return a Component via a
      method call instead of having it extend JPanel
    * Fixed a bug that caused ArrayOutOfBounds exceptions to be thrown
      sometimes when adding nodes via the JTree in DefaultView

05/30/2004  version 0.2 pre5    Ian Lewis <IanLewis@member.fsf.org>

    * Removed references to the DocumentBuffer class in the DocumentView 
      classes.

05/26/2004  version 0.2 pre4    Ian Lewis <IanLewis@member.fsf.org>

    * Removed redundant call to fireNameChanged() in DocumentBuffer
    * Moved code for setting the divider location of the split panes to an
      overridden version of setVisible(). This allows the DefaultView to set
      the divider locations after the parent container is made visible.

05/23/2004  version 0.2 pre4    Ian Lewis <IanLewis@member.fsf.org>

    * Allowed users to add a comment node to the document root.
    * fixed a bug that caused a processing instruction to not be printed on a
      new line when serialized.

05/23/2004  version 0.2 pre3    Ian Lewis <IanLewis@member.fsf.org>

    * Added a new Reload action to the file menu so that users can reload the
      current document from disk

05/22/2004  version 0.2 pre2    Ian Lewis <IanLewis@member.fsf.org>

    * Fixed a bug that caused non-dirty, non-untitled document to save when
      they were closed.
    * Added code for autoscrolling when doing drag and drop using the Autoscroll
      interface and fuctionality.
    * Added logic to expand tree nodes when you hover over them for a period of
      time.
    * Tooltip for processing instructions is now correct.
    * Changed the text for some nodes in the tree.
    * Changed versioning yet again so that we go 0.1.xx for build versions to